rework environment variables

--- a/samples/test.ipynb
+++ b/samples/test.ipynb
@@ -94,6 +94,79 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "import requests\r\n",
+    "import os\r\n",
+    "DEV_KEY = os.environ.get('DEV_KEY')\r\n",
+    "print(DEV_KEY)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "bytLRnA3KjIoWWM0MGlRWjZWaDVoR2h5UitLdVYxR0x3RWItazVZLQ==\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "# headers = {'Authorization': 'Bearer ' + DEV_KEY}\r\n",
+    "headers = {\r\n",
+    "    'Authorization': 'Bearer bytLRnA3KjIoWWM0MGlRWjZWaDVoR2h5UitLdVYxR0x3RWItazVZLQ==',\r\n",
+    "    'Content-Type': 'application/json'}\r\n",
+    "family_id = 'b5f88b8d-58a1-4f61-bf54-25b8aced74e9'"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "print(headers['Authorization'])\r\n",
+    "print('Bearer {}'.format(DEV_KEY))\r\n",
+    "\r\n",
+    "print(type(DEV_KEY))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Bearer bytLRnA3KjIoWWM0MGlRWjZWaDVoR2h5UitLdVYxR0x3RWItazVZLQ==\n",
+      "Bearer bytLRnA3KjIoWWM0MGlRWjZWaDVoR2h5UitLdVYxR0x3RWItazVZLQ==\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "response = requests.get('https://fetch.devssg.com/api/Family/{}'.format(family_id), headers=headers)\r\n",
+    "print(response.json())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'FamilyId': 'b5f88b8d-58a1-4f61-bf54-25b8aced74e9', 'Deleted': False, 'FamilyName': 'Group Test', 'CategoryName': 'Model Group/Test', 'FamilyObjectType': 'ModelGroup', 'IsFavorite': False, 'UserId': 0, 'Private': None, 'FamilyTypes': [], 'Properties': [], 'FamilyParameters': [], 'FamilyFiles': [], 'LoadMethod': 0, 'Status': 0, 'ShowProperties': False, 'ShowTypes': False, 'ShowFamilyParameters': False, 'IsNew': False, 'Modified': False, 'Action': 3}\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -115,7 +188,7 @@
    "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   },
   "interpreter": {
-   "hash": "e51067d2f6be7bdc69cc790600142f68999599c9c8fe7e42393a2fecc546810f"
+   "hash": "8a517bb6487a6d0afee10a2839dbc59124d20f7320cb08b34273c7e0d80d8489"
   }
  },
  "nbformat": 4,
