--- a/samples/query_admin.ipynb
+++ b/samples/query_admin.ipynb
@@ -24,18 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "source": [
     "for fam_dict in families:\r\n",
     "    fam = Family.from_json(fam_dict)\r\n",
-    "    print(fam.delete().json())"
+    "    print(repr(fam))\r\n",
+    "    # print(fam.delete().json())"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "True\n"
+      "Family(Name=SSG_Shelving_4-Post_Blueprint_Combo_PCS, Status=0, LoadMethod=0, CategoryName=Casework, FamilyObjectType=Family, Properties=[], Parameters=[], Files=[], Deleted=False, Id=43c82940-86a8-48c6-bba4-cca50e7feb21, GroupedFamilies=[], FamilyTypes=[])\n"
      ]
     }
    ],
