--- a/samples/sync_shared_files.ipynb
+++ b/samples/sync_shared_files.ipynb
@@ -2,61 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
-    "from fetchbim.notion import Page\r\n",
-    "from fetchbim.query import SharedFile, SharedAttribute\r\n",
-    "from tqdm import tqdm"
+    "from fetchbim.notion import NotionDatabase\r\n",
+    "from fetchbim.query import SharedFile"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
-    "# Archive rules in DB\r\n",
     "db_rules = SharedFile.get_all()\r\n",
-    "\r\n",
+    "print(\"{} rules in database\".format(len(db_rules)))\r\n",
     "# Notion to Admin and back\r\n",
-    "rules = Page.query_database('Shared Rules')\r\n",
-    "with tqdm(total=len(rules*2)) as pbar:\r\n",
-    "    shared_rules = []\r\n",
-    "    for rule in rules:\r\n",
-    "        # notion to python object\r\n",
-    "        shared_rule = SharedFile.from_notion(rule)\r\n",
-    "        # object to DB\r\n",
-    "        shared_rule.post()\r\n",
-    "        shared_rules.append(shared_rule)\r\n",
-    "        pbar.update()\r\n",
-    "    # Clean slate in notion\r\n",
-    "    SharedFile.archive_notion('Shared Rules')\r\n",
-    "    SharedFile.archive_notion('Shared Attributes')\r\n",
-    "    # DB data to notion\r\n",
-    "    for shared_rule in shared_rules:\r\n",
-    "        shared_rule.to_notion()\r\n",
-    "        pbar.update()"
+    "rules = NotionDatabase.get_all('Shared Rules')\r\n",
+    "print(\"{} rules in Notion\".format(len(rules)))"
    ],
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "  0%|          | 0/238 [00:01<?, ?it/s]"
-     ]
-    },
-    {
-     "output_type": "stream",
      "name": "stdout",
      "text": [
-      "24baf03a-5b4d-4851-acc3-78be62ae7d00\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "\n"
+      "119 rules in database\n",
+      "121 rules in Notion\n"
      ]
     }
    ],
@@ -64,13 +34,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
-    "count = 23\r\n",
-    "for i in range(101):\r\n",
-    "    sf = SharedFile(str(count), ParameterName=\"\", ParameterValueMatchType=3)\r\n",
-    "    sf.post()\r\n",
-    "    count += 1\r\n"
+    "shared_rules = []\r\n",
+    "for rule in rules[:1]:\r\n",
+    "#     # notion to python object\r\n",
+    "    shared_rule = SharedFile.from_notion(rule)\r\n",
+    "    attrs = shared_rule.Attributes\r\n",
+    "    print(shared_rule.Description)\r\n",
+    "    for attr in attrs:\r\n",
+    "        print(\"\\t{}: {}\".format(attr.Name, attr.Value))\r\n",
+    "    # object to DB\r\n",
+    "    # shared_rule.post()\r\n",
+    "    shared_rules.append(shared_rule)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# # Clean slate in notion\r\n",
+    "SharedFile.archive_notion('Shared Rules')\r\n",
+    "SharedFile.archive_notion('Shared Attributes')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# # DB data to notion\r\n",
+    "for shared_rule in shared_rules:\r\n",
+    "    shared_rule.to_notion()"
    ],
    "outputs": [],
    "metadata": {}
@@ -217,10 +215,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit"
+   "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   },
   "interpreter": {
-   "hash": "2db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
+   "hash": "8a517bb6487a6d0afee10a2839dbc59124d20f7320cb08b34273c7e0d80d8489"
   }
  },
  "nbformat": 4,
