added bounding box to settings

--- a/samples/resize_images.ipynb
+++ b/samples/resize_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from PIL import Image"
    ],
@@ -22,9 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "source": [
-    "im = Image.open('SSG-MS07-04_Large.jpg')\r\n",
+    "im = Image.open('./files/SSG-MS07-04_Large.jpg')\r\n",
     "left = int((im.width-1800)/2)\r\n",
     "large_crop = im.crop(box=(left, 0, 1800, 1186))\r\n",
     "large_height = 1186\r\n",
