--- a/samples/lookup_attributes.ipynb
+++ b/samples/lookup_attributes.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "shared_rule_id = 124"
+    "shared_rule_id = 123"
    ],
    "outputs": [],
    "metadata": {}
@@ -32,34 +32,34 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[9079] Keynote\n",
-      "\t22 63 00\n",
-      "[9085] Assembly Code\n",
-      "\tD2060.30\n",
-      "[9087] INFO_Lead Time\n",
-      "\tContact SSG for more information\n",
-      "[9090] Manufacturer\n",
-      "\tSouthwest Solutions Group_PRI\n",
-      "[9106] Has MEP Connectors\n",
+      "[8827] Manufacturer\n",
+      "\tSouthwest Soltuions Group_PNC\n",
+      "[8828] Info_Lead Time\n",
+      "\tShips in 7-8 weeks\n",
+      "[8829] Keynote\n",
+      "\t12 31 00\n",
+      "[8830] Assembly Code\n",
+      "\tE20\n",
+      "[8831] Includes Pricing\n",
       "\tYes\n",
-      "[9108] BIMobject Category\n",
-      "\tPlumbing: Valves\n",
-      "[9109] Tags\n",
-      "\tLab, Laboratory, Gas, Bunsen, Valve\n",
-      "[9110] IFC\n",
-      "\tValve\n",
-      "[9111] ADA Compliant\n",
+      "[8832] ADA Compliant\n",
       "\tNo\n",
-      "[9112] Family Design\n",
-      "\t<p>This versatile gas valve family is able to add or subtract gas outlets based on your needs. Select a type to choose between 1 outlet, 2 outputs at 90° and 180°, 3, or even 4 outlet units. This family is face-based and can be applied directly to your desired counter top. Integral, straight, serrated hose attachment is fully modeled for render-ready projects.</p>\n",
-      "[9114] Includes Pricing\n",
-      "\tYes\n",
-      "[9116] Primary Material\n",
-      "\tChrome plated brass\n",
-      "[9117] Technical Data\n",
-      "\t<h2>Construction</h2><ul><li>Deck mounted turret base with laboratory ball valve(s)</li><li>Non-removable straight seven serrated hose end</li><li>Center of hose end stands 2-1/16\" off mounted surface</li><li>Forged brass, chrome plated body and lever handle</li><li>Interior of ball valve made with molded teflon seals</li><li>Convenient colored plastic index disk on handle</li></ul><h2>Connections</h2><ul><li>3/8\" IPS female gas inlet</li><li>Includes 3/8\" IPS mounting shank with locknut and washer</li></ul>\n",
-      "[9119] Omniclass\n",
-      "\t23.65.00.00\n"
+      "[8833] Has MEP Connectors\n",
+      "\tNo\n",
+      "[8834] Tags\n",
+      "\tCasework, Blueprint, Shelving, 4 Post, 4-Post, Clipper\n",
+      "[8835] Primary Material\n",
+      "\tPowder coated steel\n",
+      "[8836] BIMobject Category\n",
+      "\tFurniture: Shelving & Storage\n",
+      "[8837] Omniclass\n",
+      "\t23-40-35-00\n",
+      "[8838] IFC\n",
+      "\tFurniture\n",
+      "[8839] Family Design\n",
+      "\t<p>This combination blueprint storage unit is a specially configured 4 post shelving system ideal for use in corporate settings and in design firms. Choose between two configuration options to select either the 48\" wide, 36\" deep combination shelves and cubbies configuration, or the 36\" wide, 24\" deep vertical cubbie configuration. All units are 7' 3\" tall and include a back panel. Optional double doors with lock are also included in this family.</p><p>Multiple units can be joined together by beginning with a unit with MODIFY_Starter checked. Uncheck ADD_Right Upright and align a unit with MODIFY_Adder checker. Repeat this process until the desired number of units is reached.</p><p>Download this families material library for access to all colors offered for this product, each with high quality textures and bump maps for photo realistic rendering</p>\n",
+      "[8840] Technical Data\n",
+      "\t<h2>Construction</h2><ul><li>Complies with SMA and ANSI MH 28.1-1982</li><li>Uprights made of 18 gauge steel.</li><li>Shelves and accessories are vertically adjustable on 1\" centers.</li><li>All shelves made of 18 gauge steel with a 1-3/16\" vertical face on all sides.</li><li>All corners and edges are welded and ground smooth</li><li>Optional doors are fully welded 116 gauge steel and equipped with three 5-knuckle hinges.</li><li>To finish, the steel is cleaned and primed, then coated with a high-grade polyester powder coat. See Finish Options for all available colors</li></ul>\n"
      ]
     }
    ],
