--- a/samples/teams_message.ipynb
+++ b/samples/teams_message.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from fetchbim.teams import sync_complete_msg"
    ],
@@ -11,9 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
-    "sync_complete_msg(title='Whatever Kyle Wants', message='This is by far the most important thing I have ever done', button=('Important Button', 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'))"
+    "table = {\r\n",
+    "    \"Best employee\": \"Not Sean\",\r\n",
+    "    \"Best doggie\": 'Leia',\r\n",
+    "    \"Dictionary\": \"Do those still exist?\"\r\n",
+    "}\r\n",
+    "\r\n",
+    "sync_complete_msg(\r\n",
+    "    title='Hello there, new hire...', \r\n",
+    "    message='I bet you regret this decision', \r\n",
+    "    button=('Click this for important training', 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'),\r\n",
+    "    table_dict=table)"
    ],
    "outputs": [],
    "metadata": {}
