--- a/samples/sync_notion_families.ipynb
+++ b/samples/sync_notion_families.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "from tqdm import tqdm\r\n",
     "\r\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "family_ids = get_ids()"
    ],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "table_dict = {}\r\n",
     "count = 0\r\n",
@@ -33,6 +33,7 @@
     "    fam_dict = get_family(family_id)\r\n",
     "    fam = Family.from_json(fam_dict)\r\n",
     "    response = fam.post_notion()\r\n",
+    "    # print(response.status_code)\r\n",
     "    count += 1\r\n",
     "    \r\n",
     "table_dict['Total Families'] = count\r\n",
@@ -48,7 +49,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 571/571 [46:59<00:00,  4.94s/it]\n"
+      "100%|██████████| 571/571 [45:40<00:00,  4.80s/it]\n"
      ]
     }
    ],
