--- a/samples/query_admin.ipynb
+++ b/samples/query_admin.ipynb
@@ -2,108 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "source": [
-    "from fetchbim.family import Family\r\n",
-    "from fetchbim.query import Filter\r\n",
-    "from fetchbim.admin import get_family\r\n",
-    "from fetchbim.settings import DELETE_FAMILY"
-   ],
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "from fetchbim.family import Family\n",
+    "from fetchbim.query import Filter\n",
+    "from fetchbim.admin import get_family\n",
+    "\n",
+    "from re import sub\n",
+    "from decimal import Decimal"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "ham_filter = Filter(ParameterName='zM', ParameterValue='28552', ParameterValueMatchType=3)\r\n",
-    "families = ham_filter.query()\r\n",
+    "ham_filter = Filter(CategoryName=\"Model Groups/Blood Slide Vertical Carousels\")\n",
+    "families = ham_filter.query()\n",
     "# print(families)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "for fam_dict in families[:1]:\r\n",
-    "    fam = Family.from_json(fam_dict)\r\n",
-    "    full_fam = Family.from_json(get_family(fam.Id))\r\n",
-    "    for p in full_fam.Parameters:\r\n",
-    "        if p.ParameterId == -1:\r\n",
-    "            print(f'{p.Name}: {p.Value}')\r\n",
-    "    for prop in full_fam.Properties:\r\n",
-    "        if prop.Id == -1:\r\n",
-    "            print(prop.Name)\r\n",
-    "\r\n",
-    "    # print(fam.Id)\r\n",
-    "    # print(fam.delete().json())"
-   ],
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Manufacturer: Southwest Solutions Group_HAM\n",
-      "INFO_Lead Time: 4-6 Weeks\n",
-      "Keynote: 12 32 16\n",
-      "Assembly Code: E2020\n",
-      "SSG_Toll Free Number: 1-800-803-1083\n",
-      "URL: https://fetchbim.com\n",
-      "URL_Contact Southwest Solutions: https://fetchbim.com/contact-us\n",
-      "Includes Pricing\n",
-      "ADA Compliant\n",
-      "Has MEP Connectors\n",
-      "Primary Material\n",
-      "BIMobject Category\n",
-      "IFC\n",
-      "Technical Data\n",
-      "Tags\n",
-      "Omniclass\n",
-      "Family Design\n"
+      "SSG_Carousel_Vertical_Pathology_Blood_Slides_PCS_14_Levels\n",
+      "\tBudget Price: 157181.69 → 195534.02\n",
+      "Family(Name=SSG_Carousel_Vertical_Pathology_Blood_Slides_PCS_14_Levels, Status=1, LoadMethod=1, CategoryName=Model Groups/Blood Slide Vertical Carousels, FamilyObjectType=ModelGroup, Properties=[Property(Name=Detail, Value=Includes:<ul><li>One Pathology Blood Slide Vertical Carousel<ul><li>6'w x 4'd x 7' 4\"h</li><li>14 Total Carriers</li></ul></li></ul>, Deleted=False, Id=361125), Property(Name=TitleHeader, Value=14 Levels, Deleted=False, Id=361126), Property(Name=TitleSubheader, Value=Pathology Blood Slide Vertical Carousel, Deleted=False, Id=361127), Property(Name=sku, Value=115-1410N, Deleted=False, Id=361128), Property(Name=Number of Columns, Value=1, Deleted=False, Id=361129), Property(Name=Budget Price, Value=195534.02, Deleted=False, Id=361130), Property(Name=Width, Value=5' 11 67/256\", Deleted=False, Id=361131), Property(Name=Depth, Value=4' 0 59/256\", Deleted=False, Id=361132), Property(Name=Height, Value=7' 4 77/128\", Deleted=False, Id=361133), Property(Name=Web Category, Value=Blood Slide Vertical Carousel, Deleted=False, Id=361134), Property(Name=product_id, Value=0, Deleted=False, Id=361135), Property(Name=Includes Pricing, Value=Yes, Deleted=False, Id=-1), Property(Name=Tags, Value=group, groups, model group, model groups, room segment, room segments, Deleted=False, Id=-1), Property(Name=ADA Compliant, Value=No, Deleted=False, Id=-1), Property(Name=Has MEP Connectors, Value=Yes, Deleted=False, Id=-1), Property(Name=Tags, Value=Blood, Slide, Medical, Hospital, Carousel, Deleted=False, Id=-1), Property(Name=Primary Material, Value=Powder coated steel, Deleted=False, Id=-1), Property(Name=BIMobject Category, Value=Furniture: Shelving & Storage, Deleted=False, Id=-1), Property(Name=Omniclass, Value=23-23 17 00, Deleted=False, Id=-1), Property(Name=IFC, Value=Specialty Equipment, Deleted=False, Id=-1), Property(Name=Family Design, Value=<h2>System Overview</h2><ul>\n",
+      "<li>Each kit comes with a variety of options that each have a unique price attached to them.</li>\n",
+      "<li>Save Up To 75% Floor Space</li>\n",
+      "<li>100% Ergonomic Accessibility</li>\n",
+      "<li>Improve Slide Security</li>\n",
+      "<li>Increase Productivity</li>\n",
+      "<li>Virtually Eliminate Damage from Slide Mishandling</li>\n",
+      "</ul><h2>Design</h2><p>\n",
+      "The Pathology Unit is designed to support the weight of the slide and tissue blocks inventory (0.28 lbs./LFI) while increasing slide density. Laboratories can save up to 75% floor space using the Pathology Unit over other standard pathology slide and tissue blocks storage methods.  Pathology slides are stored in standard slide trays and placed in carriers within the Pathology Unit. When requested by an operator, the unit rotates around vertically and presents the slide tray to the operator eliminating walk and search time. Optionally, using light directed technology, position lights direct the operator to the location of each tray designed for slide or tissue block storage. Additional inventory management software can display other information about the slide or tissue block such as an identification number. This not only speeds up pick time, but also ensures the operator picks the correct slide or tissue block required. A Pathology Unit can increase productivity up to 2/3 over standard pathology slide and tissue block storage.\n",
+      "</p>, Deleted=False, Id=-1), Property(Name=Technical Data, Value=<h2>Construction</h2>\n",
+      "<p>Base construction consists of a proven frame with bearing chain guidance. The single part side frames are completely welded.  Distance frames and supports are bolted firmly to the side frames. This allows easy handling for transportation and quick assembly at the customer's site at low costs. A high-quality powder coating increases service life.  The unit’s main structural support comes from the robust chain guides, which transfer the entire load to the floor via the frame.  In order to minimize the surface pressure on the floor, the unit has a large supporting base.</p>\n",
+      "    <li>The machine's sheet metal cladding acts as a grid construction and carries part of the weight</li>\n",
+      "    <li>The lowest front panel can be removed for service</li>\n",
+      "    <li>In order to minimize the danger of injuries, the corner angles are designed in an aesthetically appealing rounded shape.</li>\n",
+      "    <li>The carriers are attached to the transport/roller chain by means of a system with four variable supporting arms. The chain itself has a 7:1 safety factor against breakage. An additional roller lever ensures that the carriers always remain horizontal and provide extra support.</li>\n",
+      "    <li>The multi purpose (universal) carrier – a folded metal casing with half sided lid is welded to the side panels. Two additional U profiles provide the necessary torsional and bending stiffness. A standard feature of the carriers is the universal grid of indexing holes that make them ready for all application requirements.</li>\n",
+      "<h2>Power Supply</h2>\n",
+      "<li>Standard Power Supply: 110V / 1~ / 60Hz</li>\n",
+      "<li>Fuse: 16 AMP Delay</li>\n",
+      "<li>Electronics located behind the bottom access panel.</li>, Deleted=False, Id=-1)], Parameters=[], Files=[], Deleted=False, Id=f9efc791-9de7-420e-9882-03e8ca391f3c, GroupedFamilies=[GroupedFamily(ChildFamilyId=8c7feebe-76c9-4374-a997-8c53bc1d13ef, FamilyTypeId=124b350f-f719-4ef3-81ab-da3423dca1eb, ChildFamilyName=8c7feebe-76c9-4374-a997-8c53bc1d13ef, InstanceCount=1, Deleted=False, Sort=0, Width=0, Depth=0, Rotation=0, Parameters=[{'Name': 'ENTER_Shape Number', 'Value': '1', 'Modified': False, 'OldValue': None, 'IsFormula': False, 'Sort': 0, 'DataType': 'Integer', 'ParameterType': 'Type', 'Hidden': False, 'ParameterId': 5211, 'Deleted': False, 'IsCalculated': False, 'CalculatedFormula': '', 'CalculatedValue': None}, {'Name': 'Group Name', 'Value': '115-1410N', 'Modified': False, 'OldValue': None, 'IsFormula': False, 'Sort': 0, 'DataType': 'MultlineText', 'ParameterType': 'Type', 'Hidden': False, 'ParameterId': 5212, 'Deleted': False, 'IsCalculated': False, 'CalculatedFormula': '', 'CalculatedValue': None}, {'Name': 'Width', 'Value': '5.9384765625', 'Modified': False, 'OldValue': None, 'IsFormula': False, 'Sort': 0, 'DataType': 'Length', 'ParameterType': 'Type', 'Hidden': False, 'ParameterId': 5213, 'Deleted': False, 'IsCalculated': False, 'CalculatedFormula': '', 'CalculatedValue': None}, {'Name': 'Depth', 'Value': '4.01920572916667', 'Modified': False, 'OldValue': None, 'IsFormula': False, 'Sort': 0, 'DataType': 'Length', 'ParameterType': 'Type', 'Hidden': False, 'ParameterId': 5214, 'Deleted': False, 'IsCalculated': False, 'CalculatedFormula': '', 'CalculatedValue': None}, {'Name': 'Height', 'Value': '7.38346354166667', 'Modified': False, 'OldValue': None, 'IsFormula': False, 'Sort': 0, 'DataType': 'Length', 'ParameterType': 'Type', 'Hidden': False, 'ParameterId': 5215, 'Deleted': False, 'IsCalculated': False, 'CalculatedFormula': '', 'CalculatedValue': None}], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=8c7feebe-76c9-4374-a997-8c53bc1d13ef, FamilyTypeId=124b350f-f719-4ef3-81ab-da3423dca1eb, ChildFamilyName=8c7feebe-76c9-4374-a997-8c53bc1d13ef, InstanceCount=1, Deleted=False, Sort=0, Width=0, Depth=0, Rotation=0, Parameters=[], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=8c7feebe-76c9-4374-a997-8c53bc1d13ef, FamilyTypeId=124b350f-f719-4ef3-81ab-da3423dca1eb, ChildFamilyName=8c7feebe-76c9-4374-a997-8c53bc1d13ef, InstanceCount=1, Deleted=False, Sort=0, Width=0, Depth=0, Rotation=0, Parameters=[], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=8c7feebe-76c9-4374-a997-8c53bc1d13ef, FamilyTypeId=124b350f-f719-4ef3-81ab-da3423dca1eb, ChildFamilyName=8c7feebe-76c9-4374-a997-8c53bc1d13ef, InstanceCount=1, Deleted=False, Sort=1, Width=0, Depth=0, Rotation=0, Parameters=[], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=b755740f-ecfd-47ef-9d93-794b1e77db09, FamilyTypeId=359d3eca-a1d1-4d38-b01f-ff18c1213edb, ChildFamilyName=b755740f-ecfd-47ef-9d93-794b1e77db09, InstanceCount=1, Deleted=False, Sort=1, Width=2.96940104166667, Depth=None, Rotation=None, Parameters=[], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=b755740f-ecfd-47ef-9d93-794b1e77db09, FamilyTypeId=359d3eca-a1d1-4d38-b01f-ff18c1213edb, ChildFamilyName=b755740f-ecfd-47ef-9d93-794b1e77db09, InstanceCount=1, Deleted=False, Sort=1, Width=2.96940104166667, Depth=None, Rotation=None, Parameters=[{'Name': 'ENTER_Number of Carriers', 'Value': '14', 'Modified': False, 'OldValue': None, 'IsFormula': False, 'Sort': 0, 'DataType': 'Integer', 'ParameterType': 'Instance', 'Hidden': False, 'ParameterId': 5216, 'Deleted': False, 'IsCalculated': False, 'CalculatedFormula': '', 'CalculatedValue': None}], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=b755740f-ecfd-47ef-9d93-794b1e77db09, FamilyTypeId=359d3eca-a1d1-4d38-b01f-ff18c1213edb, ChildFamilyName=b755740f-ecfd-47ef-9d93-794b1e77db09, InstanceCount=1, Deleted=False, Sort=2, Width=2.96940104166667, Depth=None, Rotation=None, Parameters=[], ChildModelGroups=[]), GroupedFamily(ChildFamilyId=b755740f-ecfd-47ef-9d93-794b1e77db09, FamilyTypeId=359d3eca-a1d1-4d38-b01f-ff18c1213edb, ChildFamilyName=b755740f-ecfd-47ef-9d93-794b1e77db09, InstanceCount=1, Deleted=False, Sort=3, Width=2.96940104166667, Depth=None, Rotation=None, Parameters=[], ChildModelGroups=[])], FamilyTypes=[FamilyType(Name=Default, Parameters=[], Files=[], IsDefault=False, Deleted=False, Id=f6bd1f00-9816-4bb7-878f-dfaef5c70729, FamilyId=f9efc791-9de7-420e-9882-03e8ca391f3c)])\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "for fam_dict in families[:1]:\n",
+    "    fam = Family.from_json(fam_dict)\n",
+    "    full_fam = Family.from_json(get_family(fam.Id))\n",
+    "    full_fam.Files = []\n",
+    "    full_fam.Parameters = []\n",
+    "    print(full_fam.Name)\n",
+    "    for prop in full_fam.Properties:\n",
+    "        if prop.Name == \"Budget Price\":\n",
+    "            old_value = Decimal(sub(r'[^\\d.]', '', prop.Value))\n",
+    "            new_value = round(old_value * Decimal(1.244), 2)\n",
+    "            print(f'\\t{prop.Name}: {old_value} → {new_value}')\n",
+    "            prop.Value = str(new_value)\n",
+    "            # full_fam.post()\n",
+    "            print(repr(full_fam))\n",
+    "\n",
+    "    # print(fam.Id)\n",
+    "    # print(fam.delete().json())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "source": [
-    "get_family(fam.Id)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Family Is Deleted: list index out of range\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "get_family(fam.Id)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "source": [
-    "for fam_dict in families:\r\n",
-    "    fam = Family.from_json(fam_dict)\r\n",
-    "    fam.restore()"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "for fam_dict in families:\n",
+    "    fam = Family.from_json(fam_dict)\n",
+    "    fam.restore()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "source": [
-    "get_family(fam.Id)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'Id': '43c82940-86a8-48c6-bba4-cca50e7feb21',\n",
@@ -620,34 +629,37 @@
        " 'DownloadFamilyFile': True}"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "get_family(fam.Id)"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "8a517bb6487a6d0afee10a2839dbc59124d20f7320cb08b34273c7e0d80d8489"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('venv': venv)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.5",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('venv': venv)"
-  },
-  "interpreter": {
-   "hash": "8a517bb6487a6d0afee10a2839dbc59124d20f7320cb08b34273c7e0d80d8489"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
